--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include('./partials/head') %> 
+<%- include('./partials/head') %>
 
-<body>
-    <!-- Cabezera -->
-    <%- include('./partials/header') %>
-    <main class="main-login">
-        <!--Contenido de la página-->
-        <div class="form-login logeo">
-            <div class="container">
-                <form action="/register" method="post">
-                    <div class="container registerformulario" >
-                        <div class="main-login">
-                            <img src="/images/0001.png" alt="logo" class="logo">
-                        </div>
+    <body>
+        <!-- Cabezera -->
+        <%- include('./partials/header') %>
+            <main class="main-login">
+                <!--Contenido de la página-->
+                <div class="form-login logeo">
+                    <div class="container">
+                        <form action="/register" method="post">
+                            <div class="container registerformulario">
+                                <div class="main-login">
+                                    <img src="/images/0001.png" alt="logo" class="logo">
+                                </div>
 
-                        <label for="nombre">
-                            <p>Nombre</p>
-                        </label>
-                        
-                        <label for="email">
-                            <p>email:</p>
-                        </label>
-                        <input type="email" name="email" id="email">
-                        <% if(locals.errors && errors.email){ %>
-                            <!-- comprobamos si hay errores(practica) -->
-                        <span>
-                            <%= errors.email.msg %>
-                        </span>
-                        <% } %>
-                        <label for="contrasenia">
-                            <p>contraseña:</p>
-                        </label>
-                        <input type="password" name="contrasenia" id="contrasenia">
-                        <label for="confirmar">
-                            <p>Confirmar contraseña:</p>
-                        </label>
-                        <input type="password" name="confirmar" id="confirmar">
-                        
-                        <input type="submit" value="enviar">
-                    </div>               
-                
-                </form>
-            </div>
-        </div>
-    </main>
-    <!-- Pie de la página -->
-    <%- include('./partials/footer') %> 
-    <%- include('./partials/bootstrap-js') %> 
-</body>
+                                <div style="display: flex; flex-direction: column; justify-content: space-between;">
+                                    <div>
+                                        <label for="nombre">
+                                            <p>Nombre</p>
+                                            
+                                        </label>
+                                        <input type="text" name="nombre" id="nombre">                              
+                                    </div>
+                                    <div>
+                                        <label for="email">
+                                            <p>email:</p>
+                                        </label>
+                                        <input type="email" name="email" id="email">
+                                        <% if(locals.errors && errors.email){ %>
+                                            <!-- comprobamos si hay errores(practica) -->
+                                        <span>
+                                            <%= errors.email.msg %>
+                                        </span>
+                                        <% } %>
+                                    </div>
+                                    <div>
+                                        <label for="contrasenia">
+                                            <p>contraseña:</p>
+                                        </label>
+                                        <input type="password" name="contrasenia" id="contrasenia">
+
+                                    </div>
+                                    <div>
+                                        <label for="confirmar">
+                                            <p>Confirmar contraseña:</p>
+                                        </label>
+                                        <input type="password" name="confirmar" id="confirmar">
+                                    </div>
+                                    
+                                   
+                                    
+                                    
+                                    <input type="submit" value="enviar">
+
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </main>
+            <!-- Pie de la página -->
+            <%- include('./partials/footer') %>
+                <%- include('./partials/bootstrap-js') %>
+    </body>
 
 </html>
